--- a/Novice_Motorist/Properties/Resources.resx
+++ b/Novice_Motorist/Properties/Resources.resx
@@ -136,20 +136,14 @@
   <data name="Mustang" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Mustang.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="brand_chev" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\1x\1x\brand_chev.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Picanto_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Picanto_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Transit_Connect_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Transit_Connect_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="logo_auto_volkswagen_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\1x\logo_auto_volkswagen_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Button_Hide" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Button_Hide.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="picture_parking_device" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\picture_parking_device.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Picanto_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Picanto_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Arteon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Arteon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -163,6 +157,9 @@
   <data name="Passat_GTE_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Passat_GTE_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Passat_GTE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Passat_GTE.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="novicedriver_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\novicedriver_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -175,14 +172,17 @@
   <data name="brand_mits" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\1x\1x\brand_mits.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logo_auto_volkswagen_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\1x\logo_auto_volkswagen_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Button_Back" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Button_Back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Stinger" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Stinger.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Expedition" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Expedition.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="picture_parking_device" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\picture_parking_device.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Logotype" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Logotype.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,11 +199,14 @@
   <data name="Picanto" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Picanto.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Passat_GTE" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Passat_GTE.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Transit_Connect_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Transit_Connect_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Atlass_Cross" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Atlass_Cross.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Seltos_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Seltos_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brand_chev" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\1x\1x\brand_chev.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Button_Exite" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Button_Exite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -213,6 +216,9 @@
   </data>
   <data name="Button_Back_Move" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Button_Back_Move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Atlass_Cross" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Atlass_Cross.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="brand_citr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\1x\1x\brand_citr.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -235,7 +241,7 @@
   <data name="Arteon_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Arteon_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Seltos_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Seltos_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Stinger_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Stinger_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
